# kiegroup-dependencies

./: .gitignore  ChangeLog.md  LICENSE  Makefile  README.md  TGF.hs  collectDependencyGraphs.hs  compressDependencyGraphs.hs  dependency-graph.json  kiegroup-dependencies.cabal  kiegroup-poms-cleanup.cabal  searchDeps.hs  stack.yaml
backend/: TGF.hs  collectDependencyGraphs.hs  compressDependencyGraphs.hs
backend/app/: Main.hs  searchDeps.hs
backend/collect-deps/: Main.hs
backend/lib/: Coordinate.hs  DepGraph.hs  DependencyGraph.hs  TGF.hs  Util.hs
backend/lib/Data/: Coordinate.hs  DepGraph.hs
backend/lib/Maven/DepGraph/: Report.hs
backend/lib/Maven/DepGraph/Report/: IO.hs
backend/lib/TGF/: IO.hs
backend/module-structure/: Main.hs
backend/mvn-repo-scraper/: Main.hs
css/: style.css
docs/: Concepts.dot
frontend/: elm-package.json
frontend/collect-deps/: elm-package.json
frontend/collect-deps/src/: Main.elm  Page.elm
frontend/collect-deps/src/Data/: Coordinate.elm  DependencyGraph.elm  DependencyTree.elm  Scope.elm
frontend/collect-deps/src/Data/Tree/: Drawer.elm
frontend/collect-deps/src/Page/: DependencyConvergence.elm
frontend/collect-deps/src/View/: DependencyGraph.elm  DependencyTable.elm  DependencyTree.elm
frontend/module-structure/: build.sh  elm-package.json
frontend/module-structure/src/Data/: Coordinate.elm  Maven.elm
frontend/module-structure/src/Views/: Tree.elm
frontend/src/: Main.elm  Route.elm
frontend/src/Data/: Coordinate.elm  GAV.elm  Github.elm  Maven.elm  Tree.elm
frontend/src/Page/: Home.elm
js/: elm.js
