name: kiegroup-dependencies
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: jhrcek@redhat.com
homepage: https://github.com/jhrcek/kiegroup-poms-cleanup
synopsis: Set of tools to analyze kiegroup project dependencies
category: Development
author: Jan Hrček
extra-source-files:
    ChangeLog.md
    README.md

library
    exposed-modules:
        TGF
        TGF.IO
        Util
    build-depends:
        aeson,
        attoparsec,
        base,
        containers,
        system-filepath,
        text,
        turtle
    default-language: Haskell2010
    hs-source-dirs: backend/lib
    ghc-options: -Wall

executable collect-deps
    main-is: Main.hs
    build-depends:
        aeson,
        base,
        bytestring,
        fgl,
        foldl,
        kiegroup-dependencies,
        mtl,
        containers,
        turtle
    default-language: Haskell2010
    hs-source-dirs: backend/collect-deps
    ghc-options: -Wall -O2
