name: kiegroup-poms-cleanup
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: jhrcek@redhat.com
homepage: https://github.com/jhrcek/kiegroup-poms-cleanup
synopsis: Set of tools to analyze kiegroup project dependencies
category: Development
author: Jan Hrček
extra-source-files:
    ChangeLog.md
    README.md

library
    exposed-modules:
        TGF
        TGF.IO
        Util
    build-depends:
        aeson -any,
        attoparsec -any,
        base -any,
        containers -any,
        system-filepath -any,
        text -any,
        turtle -any
    default-language: Haskell2010
    hs-source-dirs: backend/lib
    ghc-options: -Wall

executable collect-deps
    main-is: Main.hs
    build-depends:
        aeson -any,
        base -any,
        bytestring -any,
        fgl -any,
        foldl -any,
        kiegroup-poms-cleanup -any,
        mtl -any,
        containers -any,
        turtle -any
    default-language: Haskell2010
    hs-source-dirs: backend/collect-deps
    ghc-options: -Wall -O2
