name: kiegroup-poms-cleanup
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: jhrcek@redhat.com
homepage: https://github.com/jhrcek/kiegroup-poms-cleanup
synopsis: Set of tools to analyze kiegroup project dependencies
category: Development
author: Jan Hrček
extra-source-files:
    ChangeLog.md
    README.md

library
    exposed-modules:
        DependencyGraph
        Coordinate
        TGF
        TGF.IO
        Util
    build-depends:
        aeson,
        attoparsec,
        base,
        bytestring,
        containers,
        fgl,
        foldl,
        mtl,
        system-filepath,
        text,
        turtle
    default-language: Haskell2010
    hs-source-dirs: backend/lib
    ghc-options: -Wall

executable collect-deps
    main-is: Main.hs
    build-depends:
        aeson,
        base,
        bytestring,
        kiegroup-poms-cleanup,
        turtle
    default-language: Haskell2010
    hs-source-dirs: backend/collect-deps
    ghc-options: -Wall -O2

executable mvn-repo-scraper
    main-is: Main.hs
    build-depends:
        aeson,
        base,
        bytestring,
        http-client-tls,
        http-conduit,
        kiegroup-poms-cleanup,
        tagsoup,
        text
    default-language: Haskell2010
    hs-source-dirs: backend/mvn-repo-scraper
    ghc-options: -Wall -O2
